--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - '**.pbix'
+      - '**.pbip'
       - '.github/workflows/generate-wiki.yml'
   workflow_dispatch:
     inputs:
@@ -51,28 +52,12 @@ jobs:
       - name: Generate wiki
         run: |
           python generate_wiki.py "${{ steps.find-pbix.outputs.pbix_files }}" \
-            -o ./wiki-output
+            -o ./docs
       
-      - name: Checkout wiki
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.repository }}.wiki
-          path: wiki
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Update wiki content
+      - name: Commit and push documentation
         run: |
-          # Clear existing content (except .git)
-          find wiki -maxdepth 1 -type f -name "*.md" -delete
-          
-          # Copy new content
-          cp -r wiki-output/* wiki/
-      
-      - name: Commit and push wiki
-        run: |
-          cd wiki
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add docs/
           git commit -m "Auto-update documentation from ${{ github.sha }}" || echo "No changes to commit"
           git push
