--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -34,10 +34,11 @@ jobs:
       
       - name: Install dependencies
         run: |
-          git clone https://github.com/jonaolden/pbixray-mcp-server.git
-          pip install -e ./pbixray-mcp-server
-          pip install mcp pbixray
           pip install -r requirements.txt
+          git clone https://github.com/jonaolden/pbixray-mcp-server.git
+          cd pbixray-mcp-server
+          pip install -e .
+          cd ..
       
       - name: Find PBIX files
         id: find-pbix
