Update workflow default to actual sample PBIX path

--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -11,7 +11,7 @@ on:
       pbix_path:
         description: 'Path to PBIX file'
         required: true
-        default: 'models/SalesModel.pbix'
+        default: './pbixray-mcp-server/demo/AdventureWorks Sales.pbix'
 
 jobs:
   generate-docs:
