--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ Thumbs.db
 wiki/
 wiki-output/
 # docs/ folder is committed for GitHub Pages
-*.pbix
+# *.pbix files are committed so workflow can process them
 pbixray-mcp-server/
 powerbi-modeling-mcp/
 powerbi-modeling-mcp-extracted/
