--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -71,4 +71,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/
           git commit -m "Auto-update documentation from ${{ github.sha }}" || echo "No changes to commit"
-          git push
+          git push origin main
