--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -55,15 +55,30 @@ jobs:
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
             echo "pbix_files=${{ github.event.inputs.pbix_path }}" >> $GITHUB_OUTPUT
           else
-            # Find PBIX files, excluding the demo folder
-            files=$(find . -name "*.pbix" -type f -not -path "*/pbixray-mcp-server/*" | head -1)
-            echo "pbix_files=$files" >> $GITHUB_OUTPUT
+            # Find changed PBIX files in the push
+            changed_files=$(git diff --name-only HEAD^ HEAD | grep '\.pbix$' || true)
+            
+            if [ -z "$changed_files" ]; then
+              # No changed PBIX files, find all PBIX files
+              echo "No changed PBIX files detected, processing all PBIX files"
+              changed_files=$(find . -name "*.pbix" -type f -not -path "*/pbixray-mcp-server/*")
+            else
+              echo "Found changed PBIX files:"
+              echo "$changed_files"
+            fi
+            
+            echo "pbix_files=$changed_files" >> $GITHUB_OUTPUT
           fi
       
       - name: Generate wiki
         run: |
-          python generate_wiki.py "${{ steps.find-pbix.outputs.pbix_files }}" \
-            -o ./docs
+          # Process each PBIX file
+          for pbix in ${{ steps.find-pbix.outputs.pbix_files }}; do
+            if [ -f "$pbix" ]; then
+              echo "Processing: $pbix"
+              python generate_wiki.py "$pbix" -o ./docs
+            fi
+          done
       
       - name: Commit and push documentation
         run: |
