--- a/.github/workflows/generate-wiki.yml
+++ b/.github/workflows/generate-wiki.yml
@@ -126,7 +126,7 @@ jobs:
 
   # Job 2: Process PBIP folders on Windows (MCP engine)
   pbip-docs:
-    runs-on: windows-latest
+    runs-on: windows-2022  # Explicit Windows Server 2022
     
     permissions:
       contents: write
@@ -142,6 +142,11 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+      
+      - name: Setup .NET Runtime
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
       
       - name: Install dependencies
         run: |
